# devleven

./: .gitignore  pyproject.toml
app/: Dockerfile  config.py  main.py  setup_db.py
app/db/: __init__.py  mongo.py
app/handlers/: __init__.py  dashboard_ws.py  websocket_handler.py
app/models/: __init__.py  call_models.py  call_record_models.py
app/routes/: __init__.py  dashboard.py  outbound_calls.py  webhooks.py
app/services/: __init__.py  call_record_service.py  elevenlabs_service.py  email_service.py  gemini_service.py  twilio_service.py  whatsapp_service.py
app/utils/: __init__.py  csv_processor.py  webhook_security.py
client/: README.md  index.html  pnpm-lock.yaml  tailwind.config.ts
client/src/: index.css
client/src/components/calls/: BulkCallForm.tsx  CsvUploadForm.tsx  InitiateCallModal.tsx  SingleCallForm.tsx
client/src/components/dashboard/: CallDetailModal.tsx  CallTable.tsx  Pagination.tsx  SummaryCards.tsx  WebSocketIndicator.tsx
client/src/components/knowledge-base/: KnowledgeBaseUploadModal.tsx
client/src/components/ui/: badge.tsx
client/src/hooks/: useCallForms.ts  useWebSocket.ts
client/src/pages/: Dashboard.tsx
client/src/services/: api.ts  callsApi.ts  knowledgeBaseApi.ts
client/src/types/: call-modal.types.ts  call.types.ts  knowledge-base.types.ts
client/src/utils/: formatters.ts  validators.ts
docs/: .env.example  AGENT_SYSTEM_PROMPT.md  POST_CALL_NOTIFICATIONS.md  QUICKSTART.md  README.md  requirements.txt  sample_contacts.csv
